grammar.js
    source_file: $ => optional(seq(sep1($._statement, ";"), optional(";"))),

    _statement: $ =>
      choice(
        $.begin_statement,
        $.savepoint_statement,
        $.commit_statement,
        $.rollback_statement,
        $.pg_command,

        $.select_statement,
        $.update_statement,
        $.insert_statement,
        $.delete_statement,
        $.set_statement,
        $.grant_statement,
        $.revoke_statement,
        $.alter_default_privileges_statement,
        $.drop_statement,
        $.create_statement,
        $.alter_statement,
        $.truncate_statement,
        $.create_type_statement,
        $.create_domain_statement,
        $.create_table_statement,
        $.create_index_statement,
        $.create_schema_statement,
        $.create_database_statement,
        $.create_role_statement,
        $.create_extension_statement,
        $.create_event_trigger_statement,
        $.create_aggregate_statement,
        $.create_policy_statement,
        $.drop_function_statement,
        $.drop_database_statement,

        // TODO: remove from _statement
        $.return_statement,
        $.declare_statement,

        $.comment_statement,
        $.create_view_statement,
        $.create_materialized_view_statement,
        $.alter_type_statement,
        $.alter_table_statement,
        $.combining_query,
        $.vacuum_statement,
        $.do_statement,
        $.values_clause,
        $.recovery_values_statement,

        $.create_trigger_statement,
        $.create_function_statement,
      ),

    select_statement: $ => seq(optional($.with_clause), $._select_statement),
    insert_statement: $ => seq(optional($.with_clause), $._insert_statement),
    update_statement: $ => seq(optional($.with_clause), $._update_statement),
    delete_statement: $ => seq(optional($.with_clause), $._delete_statement),

    if_not_exists: $ => kw("IF NOT EXISTS"),

    return_statement: $ =>
      seq(kw("RETURN"), field("expression", choice($._expression, $.select_statement))),
    declare_statement: $ =>
      seq(kw("DECLARE"), $.identifier, $._type, optional($.default_clause)),

    // Create function
    create_function_statement: $ =>
      seq(
        choice(createOrReplace("FUNCTION"), createOrReplace("PROCEDURE")),
        field("name", $._identifier),
        field("parameters", $.function_parameters),
        optional(seq(kw("RETURNS"), field("return_type", $._function_return_type))),
        repeat(field("hint", $._function_hint)),
        optional(seq(
          choice(kw("IS"), kw("AS")),
          optional(field("declarations", $.declare_section)),
        )),
        field("body", $.function_body),
        repeat(field("hint", $._function_hint)),
      ),
    _function_hint: $ =>
      choice(
        $._function_language,
        seq(kw("TRANSFORM FOR TYPE"), alias(commaSep1($.identifier), $.transform_hint)),
        $.window_hint,
        $.leakproof_hint,
        seq(kw("COST"), alias($.number, $.cost_hint)),
        seq(kw("ROWS"), alias($.number, $.rows_hint)),
        seq(kw("SUPPORT"), alias($.identifier, $.support_hint)),
        $.external_hint,
        $.optimizer_hint,
        $.parallel_hint,
        $.null_hint,
        $.deterministic_hint,
        $.sql_hint,
        $.sql_security_hint,
        $.dynamic_result_sets_hint,
        $.invoker_rights_hint,
      ),

    optimizer_hint: $ => choice(kw("VOLATILE"), kw("IMMUTABLE"), kw("STABLE")),
    parallel_hint: $ => seq(kw("PARALLEL"), $._parallel_option_value),
    _parallel_option_value: $ => choice(
      kw("SAFE"),
      kw("UNSAFE"),
      kw("RESTRICTED")
    ),
    null_hint: $ =>
      choice(
        kw("CALLED ON NULL INPUT"),
        kw("RETURNS NULL ON NULL INPUT"),
        kw("STRICT"),
      ),

    // MySQL hints
    deterministic_hint: $ => seq(optional(kw("NOT")), kw("DETERMINISTIC")),
    _function_return_type: $ =>
      prec.right(choice($.setof, $._type, $.constrained_type)),
    setof: $ =>
      prec.right(seq(kw("SETOF"), choice($._type, $.constrained_type))),
    function_parameters: $ =>
      seq("(", optional(commaSep1($.function_parameter)), ")"),
    function_parameter: $ =>
      seq(
        choice(
          seq(
            field("argmode", optional($.function_argmode)),
            field("name", optional($.identifier)),
          ),
          seq(
            field("name", optional($.identifier)),
            field("argmode", optional($.function_argmode)),
          ),
        ),
        field("type", choice($._type, $.constrained_type)),
        optional(seq(
          choice("=", kw("DEFAULT")),
          field("default_value", $._expression)
        )),
      ),
    function_argmode: $ => choice(
      kw("IN"),
      seq(optional(kw("IN")), kw("OUT"), optional(kw("NOCOPY"))),
      kw("INOUT"),
      kw("VARIADIC")
    ),

    function_body: $ => seq(
      choice(
        seq($.string, optional(seq(",", $.string))),
        seq(optional($.label), $.compound_statement),
        $.select_statement,
        $.return_statement,
      ),
    ),

    create_trigger_statement: $ =>
      seq(
        kw("CREATE"),
        optional(kw("OR REPLACE")),
        optional(kw("CONSTRAINT")),
        kw("TRIGGER"),
        optional($.if_not_exists),
        field("name", $.identifier),
        $.trigger_time,
        $.trigger_event,
        kw("ON"),
        field("on_table", $._identifier),
        optional($.trigger_reference),
        optional($.trigger_preferencing),
        optional(
          seq(
            kw("FOR"),
            optional(kw("EACH")),
            choice(kw("ROW"), kw("STATEMENT")),
          ),
        ),
        optional($.trigger_condition),
        optional($.trigger_order),
        $.trigger_body,
      ),
    trigger_reference: $ => seq(kw("FROM"), $._identifier),
    trigger_preferencing: $ =>
      seq(
        kw("REFERENCING"),
        repeat1(
          seq(
            choice(kw("NEW"), kw("OLD")),
            kw("TABLE"),
            optional(kw("AS")),
            $.identifier,
          ),
        ),
      ),
    trigger_time: $ => choice(kw("BEFORE"), kw("AFTER"), kw("INSTEAD OF")),
    trigger_event: $ =>
      choice(
        kw("INSERT"),
        kw("DELETE"),
        kw("TRUNCATE"),
        seq(kw("UPDATE"), optional(seq(kw("OF"), repeat1($._identifier)))),
      ),
    // PostgreSQL trigger condition
    trigger_condition: $ => seq(kw("WHEN"), $._expression),
    // MySQL trigger order
    trigger_order: $ =>
      seq(choice(kw("FOLLOWS"), kw("PRECEDES")), $._identifier),
    trigger_body: $ =>
      choice(
        $.execute_clause,
        // PostgreSQL style trigger body
        // MySQL style trigger body
        $._statement,
        $.compound_statement,
      ),
    set_statement: $ =>
      seq(
        kw("SET"),
        field("scope", optional(choice(kw("SESSION"), kw("LOCAL")))),
        choice(
          seq(kw("ROLE"), field("role_name", $._identifier)),
          seq(
            kw("TIME ZONE"),
            field("timezone", choice(
              $.string,
              kw("LOCAL"),
              kw("DEFAULT")
            ))
          ),
          seq(
            $._identifier,
            choice("=", kw("TO")),
            choice($._expression, kw("DEFAULT")),
          )
        )
      ),
    create_table_statement: $ =>
      seq(
        kw("CREATE"),
        optional(choice(kw("TEMPORARY"), kw("TEMP"))),
        kw("TABLE"),
        optional($.if_not_exists),
        field("name", $._identifier),
        choice(
          seq(
            optional(alias($.identifier_list, $.column_names)),
            optional($.comment_clause),
            kw("AS"),
            choice(
              $.select_statement,
              $.values_clause,
            )
          ),
          seq(
            $._table_parameters,
            optional($.comment_clause),
            optional(
              seq(
                optional(kw("AS")),
                $.select_statement
              )
            )
          )
        ),
        optional(kw("WITHOUT OIDS")),
      ),
    _table_parameters: $ =>
      seq(
        "(",
        commaSep(choice(
          field("columns", $.table_column),
          field("constraints", $._table_constraint)
        )),
        ")",
      ),
    table_column: $ =>
      prec.right(
        seq(
          field("name", $._identifier),
          field("type", $._type),
          field("constraints", repeat($._column_constraint)),
        ),
      ),

    _column_constraint: $ => choice(
      $.default_clause,
      $.primary_key_constraint,
      $.check_constraint,
      $.references_constraint,
      $.unique_constraint,
      $.null_constraint,
      $.named_constraint,
      $.auto_increment_constraint,
      $.generated_constraint,
      $.order,
      $.comment_clause
    ),
    null_constraint: $ => seq(optional(kw("NOT")), $.NULL),
    auto_increment_constraint: _ => kw("AUTO_INCREMENT"),
    _column_default_expression: $ =>
      choice(
        $.function_call,
        $._parenthesized_expression,
        $.string,
        $.number,
        $.identifier,
        $.type_cast,
        $.field_selection,
        $.TRUE,
        $.FALSE,
        $.NULL,
      ),
    default_clause: $ =>
      seq(
        kw("DEFAULT"),
        // TODO: this should be specific variable-free expression https://www.postgresql.org/docs/9.1/sql-createtable.html
        // TODO: simple expression to use for check and default
        $._column_default_expression,
      ),

    create_view_statement: $ =>
      prec.right(
        seq(
          kw("CREATE"),
          optional(createCaseInsensitiveRegex("OR REPLACE")),
          optional(choice(kw("TEMPORARY"), kw("TEMP"))),
          kw("VIEW"),
          optional($.if_not_exists),
          field("name", $._identifier),
          optional(field("columns", $.view_columns)),
          optional($.comment_clause),
          optional($.view_options),
          $.view_body,
          optional($.view_check_option),
        ),
      ),
    // Support column comments
    option_list: $ =>
      seq("(", commaSep1($.kv_option), ")"),
    view_options: $ => seq(kw("WITH"), $.option_list),
    // MySQL support
    view_check_option: $ =>
      seq(
        kw("WITH"),
        optional(choice(kw("CASCADED"), kw("LOCAL"))),
        kw("CHECK OPTION"),
      ),
    view_body: $ =>
      seq(
        kw("AS"),
        choice(
          $.select_statement,
          $.select_subexpression,
          $.combining_query,
          $.values_clause
        ),
      ),

    create_materialized_view_statement: $ =>
      prec.right(
        seq(
          kw("CREATE MATERIALIZED VIEW"),
          optional($.if_not_exists),
          field("name", $._identifier),
          optional(field("columns", alias($.identifier_list, $.column_names))),
          optional($.using_clause),
          optional($.view_options),
          optional($.tablespace_hint),
          $.view_body,
          optional($.data_hint),
        ),
      ),
    tablespace_hint: $ => seq(kw("TABLESPACE"), $._identifier),
    data_hint: $ => seq(kw("WITH"), optional(kw("NO")), kw("DATA")),
    using_clause: $ => seq(kw("USING"), choice($.identifier, $.identifier_list)),


    // SELECT
    _select_statement: $ =>
      prec.right(
        seq(
          $.select_clause,
          optional($.from_clause),
          optional($.where_clause),
          optional($.group_by_clause),
          optional($.window_clause),
          optional($.order_by_clause),
          optional($.limit_clause),
          optional($.offset_clause),
        ),
      ),

    where_clause: $ => seq(kw("WHERE"), field("condition", $._expression)),
    alias: $ =>
      prec.right(
        choice($.identifier, $.table_and_columns, $.column_definitions, $.string),
      ),
    aliased_expression: $ => seq(field("expression", $._expression), optional(kw("AS")), field("alias", $.alias)),
    _aliasable_expression: $ =>
      prec.right(choice($._expression, $.aliased_expression)),
    select_item: $ =>
      seq(
        $._aliasable_expression,
        optional(seq(kw("INTO"), field("into", $.identifier))),
      ),
    select_clause: $ =>
      prec.right(
        seq(
          kw("SELECT"),
          optional(choice(kw("ALL"), $.distinct_clause)),
          field("items", commaSep($.select_item)),
        ),
      ),
    from_clause: $ => seq(kw("FROM"), field("items", commaSep1($.from_item))),
    from_item: $ =>
      choice(
        seq(
          optional(kw("ONLY")),
          $._aliasable_expression,
          optional($.tablesample_clause),
        ),
        seq("(", $.join_clause, ")"),
        $.join_clause,
      ),
    select_subexpression: $ =>
      prec(
        1,
        seq(
          optional(kw("LATERAL")),
          "(",
          choice($.select_statement, $.combining_query, $.values_clause),
          ")",
        ),
      ),

    // UPDATE
    _update_statement: $ =>
      seq(
        kw("UPDATE"),
        optional(kw("ONLY")),
        field("table", $.identifier),
        optional("*"),
        optional(seq(optional(kw("AS")), field("table_alias", $.alias))),
        $.set_clause,
        optional($.from_clause),
        optional($.where_clause),
        optional($._returning_clause),
      ),
    set_clause: $ => seq(kw("SET"), commaSep1($.assignment_expression)),
    assignment_expression: $ =>
      choice(
        seq(field("left", $._identifier), "=", field("right", $._expression)),
        seq(
          field("left", $.identifier_list),
          "=",
          field("right", choice(
            $.select_subexpression,
            $.row_constructor,
            $.composite_expression,
          )),
        ),
      ),

    // INSERT
    _insert_statement: $ =>
      seq(
        kw("INSERT"),
        kw("INTO"),
        field("table", $._identifier),
        optional(seq(kw("AS"), field("table_alias", $.identifier))),
        optional(field("columns", alias($.identifier_list, $.column_names))),
        optional($.overriding_value),
        choice(
          $.default_values,
          $.values_clause,
          $.select_statement,
          $.set_clause,
        ),
        optional($.on_conflict),
        optional($._returning_clause),
      ),
    values_clause: $ =>
      seq(
        kw("VALUES"),
        field("items", commaSep1($.values_item)),
        optional($.order_by_clause),
        optional($.limit_clause),
        optional($.offset_clause),
        optional($.fetch_clause),
      ),
    values_item: $ => choice(
      seq("(", commaSep1(choice($._expression, kw("DEFAULT"))), ")"),
      $.row_constructor,
    ),
    _delete_statement: $ =>
      prec.right(seq(
        kw("DELETE FROM"),
        optional(kw("ONLY")),
        field("table", $._identifier),
        optional("*"),
        optional(seq(optional(kw("AS")), field("table_alias", $.alias))),
        optional($.where_clause),
        optional($._returning_clause),
      )),

    function_call: $ =>
      prec.right(
        1,
        seq(
          optional(kw("LATERAL")),
          field("function", $._identifier),
          "(",
          optional(field("arguments", $._function_call_arguments)),
          ")",
          optional($.with_ordinality),
          optional($.within_group_clause),
          optional($.filter_clause),
          optional($.over_clause),
        ),
      ),
    _function_call_arguments: $ =>
      seq(
        optional(choice(kw("ALL"), kw("DISTINCT"))),
        choice(
          commaSep1(choice($._expression, $.named_argument)),
          $.select_statement
        ),
        optional(seq(kw("FROM"), $._expression)),
        optional(seq(kw("FOR"), $.number)),
        optional(seq(kw("AS"), $._type)),
        optional($.order_by_clause),
      ),
    _unquoted_identifier: $ => /[a-zA-Z0-9_]+/,
    
    identifier: $ => choice($._unquoted_identifier, $._quoted_identifier),
